@@ -2,7 +2,7 @@
 ;; full set of options are here .. https://github.com/technomancy/leiningen/blob/master/sample.project.clj
 
 (defproject metabase-core "1.0.0-SNAPSHOT"
-  :description      "Metabase Community Edition"
+  :description      "Metabase"
   :url              "https://metabase.com/"
   :min-lein-version "2.5.0"
 
@@ -12,11 +12,17 @@
                                         "-user" "" "-password" "" "-driver" "org.h2.Driver"]
    "generate-automagic-dashboards-pot" ["with-profile" "+generate-automagic-dashboards-pot" "run"]
    "install"                           ["with-profile" "+install" "install"]
+   "install-ee"                        ["with-profile" "+install,+ee" "install"]
    "install-for-building-drivers"      ["with-profile" "install-for-building-drivers" "install"]
+   "install-for-building-drivers-ee"   ["with-profile" "install-for-building-drivers,+ee" "install"]
    "run"                               ["with-profile" "+run" "run"]
+   "run-ee"                            ["with-profile" "+run,+ee" "run"]
    "run-with-repl"                     ["with-profile" "+run-with-repl" "repl"]
+   "run-with-repl-ee"                  ["with-profile" "+run-with-repl,+ee" "repl"]
    "ring"                              ["with-profile" "+ring" "ring"]
+   "ring-ee"                           ["with-profile" "+ring,+ee" "ring"]
    "test"                              ["with-profile" "+test" "test"]
+   "test-ee"                           ["with-profile" "+test,+ee" "test"]
    "bikeshed"                          ["with-profile" "+bikeshed" "bikeshed"
                                         "--max-line-length" "205"
                                         ;; see https://github.com/dakrone/lein-bikeshed/issues/41
@@ -29,8 +35,11 @@
    ;; `lein lint` will run all linters
    "lint"                              ["do" ["eastwood"] ["bikeshed"] ["check-namespace-decls"] ["docstring-checker"] ["cloverage"]]
    "repl"                              ["with-profile" "+repl" "repl"]
+   "repl-ee"                           ["with-profile" "+repl,+ee" "repl"]
    "strip-and-compress"                ["with-profile" "+strip-and-compress,-user,-dev" "run"]
-   "compare-h2-dbs"                    ["with-profile" "+compare-h2-dbs" "run"]}
+   "compare-h2-dbs"                    ["with-profile" "+compare-h2-dbs" "run"]
+   "uberjar"                           ["uberjar"]
+   "uberjar-ee"                        ["with-profile" "+ee" "uberjar"]}
 
   ;; !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
   ;; !!                                   PLEASE KEEP THESE ORGANIZED ALPHABETICALLY                                  !!
@@ -40,15 +49,17 @@
   [[org.clojure/clojure "1.10.1"]
    [org.clojure/core.async "0.4.500"
     :exclusions [org.clojure/tools.reader]]
+   [joda-time/joda-time "2.10.8"]
+   [org.clojure/core.logic "1.0.0"]
    [org.clojure/core.match "0.3.0"]                                   ; optimized pattern matching library for Clojure
    [org.clojure/core.memoize "1.0.236"]                               ; needed by core.match; has useful FIFO, LRU, etc. caching mechanisms
    [org.clojure/data.csv "0.1.4"]                                     ; CSV parsing / generation
-   [org.clojure/java.classpath "0.3.0"]                               ; examine the Java classpath from Clojure programs
+   [org.clojure/java.classpath "1.0.0"]                               ; examine the Java classpath from Clojure programs
    [org.clojure/java.jdbc "0.7.11"]                                   ; basic JDBC access from Clojure
    [org.clojure/math.combinatorics "0.1.4"]                           ; combinatorics functions
    [org.clojure/math.numeric-tower "0.0.4"]                           ; math functions like `ceil`
    [org.clojure/tools.logging "1.1.0"]                                ; logging framework
-   [org.clojure/tools.namespace "0.2.11"]
+   [org.clojure/tools.namespace "1.0.0"]
    [org.clojure/tools.trace "0.7.10"]                                 ; function tracing
    [amalloy/ring-buffer "1.2.2"
     :exclusions [org.clojure/clojure
@@ -59,12 +70,14 @@
    [buddy/buddy-core "1.5.0"                                          ; various cryptograhpic functions
     :exclusions [commons-codec]]
    [buddy/buddy-sign "3.0.0"]                                         ; JSON Web Tokens; High-Level message signing library
-   [cheshire "5.8.1"]                                                 ; fast JSON encoding (used by Ring JSON middleware)
-   [clj-http "3.9.1"                                                  ; HTTP client
+   [cheshire "5.10.0"]                                                ; fast JSON encoding (used by Ring JSON middleware)
+   [clj-http "3.10.3"                                                 ; HTTP client
     :exclusions [commons-codec
                  commons-io
                  slingshot]]
-   [clojure.java-time "0.3.2"]                                        ; Java 8 java.time wrapper
+   ;; fork to address #13102 - see upstream PR: https://github.com/dm3/clojure.java-time/pull/60
+   ;; TODO: switch back to the upstream once a version is released with the above patch
+   [robdaemon/clojure.java-time "0.3.3-SNAPSHOT"]                     ; Java 8 java.time wrapper
    [clojurewerkz/quartzite "2.1.0"                                    ; scheduling library
     :exclusions [c3p0]]
    [colorize "0.1.1" :exclusions [org.clojure/clojure]]               ; string output with ANSI color codes (for logging)
@@ -79,7 +92,6 @@
    [com.draines/postal "2.0.3"]                                       ; SMTP library
    [com.google.guava/guava "28.2-jre"]                                ; dep for BigQuery, Spark, and GA. Require here rather than letting different dep versions stomp on each other — see comments on #9697
    [com.h2database/h2 "1.4.197"]                                      ; embedded SQL database
-   [com.mattbertolini/liquibase-slf4j "2.0.0"]                        ; Java Migrations lib logging. We don't actually use this AFAIK (?)
    [com.taoensso/nippy "2.14.0"]                                      ; Fast serialization (i.e., GZIP) library for Clojure
    [commons-codec/commons-codec "1.14"]                               ; Apache Commons -- useful codec util fns
    [commons-io/commons-io "2.6"]                                      ; Apache Commons -- useful IO util fns
@@ -100,28 +112,31 @@
                  org.yaml/snakeyaml]]
    [javax.xml.bind/jaxb-api "2.4.0-b180830.0359"]                     ; add the `javax.xml.bind` classes which we're still using but were removed in Java 11
    [kixi/stats "0.4.4" :exclusions [org.clojure/data.avl]]            ; Various statistic measures implemented as transducers
-   [log4j/log4j "1.2.17"                                              ; logging framework. TODO - consider upgrading to Log4j 2 -- see https://logging.apache.org/log4j/log4j-2.6.1/manual/migration.html
-    :exclusions [javax.mail/mail
-                 javax.jms/jms
-                 com.sun.jdmk/jmxtools
-                 com.sun.jmx/jmxri]]
    [me.raynes/fs "1.4.6"]                                             ; Filesystem tools
    [medley "1.3.0"]                                                   ; lightweight lib of useful functions
    [metabase/connection-pool "1.1.1"]                                 ; simple wrapper around C3P0. JDBC connection pools
+   [metabase/saml20-clj "2.0.0"]                                      ; EE SAML integration
    [metabase/throttle "1.0.2"]                                        ; Tools for throttling access to API endpoints and other code pathways
+   [net.redhogs.cronparser/cron-parser-core "3.4"                     ; describe Cron schedule in human-readable language
+    :exclusions [org.slf4j/slf4j-api joda-time]]                      ; exclude joda time 2.3 which has outdated timezone information
    [net.sf.cssbox/cssbox "4.12" :exclusions [org.slf4j/slf4j-api]]    ; HTML / CSS rendering
    [org.apache.commons/commons-lang3 "3.10"]                          ; helper methods for working with java.lang stuff
+   [org.apache.logging.log4j/log4j-api "2.13.3"]                      ; apache logging framework
+   [org.apache.logging.log4j/log4j-1.2-api "2.13.3"]                  ; add compatibility with log4j 1.2
+   [org.apache.logging.log4j/log4j-core "2.13.3"]                     ; apache logging framework
+   [org.apache.logging.log4j/log4j-jcl "2.13.3"]                      ; allows the commons-logging API to work with log4j 2
+   [org.apache.logging.log4j/log4j-liquibase "2.13.3"]                ; liquibase logging via log4j 2
+   [org.apache.logging.log4j/log4j-slf4j-impl "2.13.3"]               ; allows the slf4j API to work with log4j 2
    [org.apache.sshd/sshd-core "2.4.0"]                                ; ssh tunneling and test server
    [org.bouncycastle/bcprov-jdk15on "1.65"]                           ; Bouncy Castle crypto library -- explicit version of BC specified to resolve illegal reflective access errors
    [org.clojars.pntblnk/clj-ldap "0.0.16"]                            ; LDAP client
-   [org.eclipse.jetty/jetty-server "9.4.27.v20200227"]                ; We require JDK 8 which allows us to run Jetty 9.4, ring-jetty-adapter runs on 1.7 which forces an older version
+   [org.eclipse.jetty/jetty-server "9.4.32.v20200930"]                ; We require JDK 8 which allows us to run Jetty 9.4, ring-jetty-adapter runs on 1.7 which forces an older version
    [org.flatland/ordered "1.5.9"]                                     ; ordered maps & sets
    [org.liquibase/liquibase-core "3.6.3"                              ; migration management (Java lib)
     :exclusions [ch.qos.logback/logback-classic]]
-   [org.mariadb.jdbc/mariadb-java-client "2.5.1"]                     ; MySQL/MariaDB driver
+   [org.mariadb.jdbc/mariadb-java-client "2.6.2"]                     ; MySQL/MariaDB driver
    [org.postgresql/postgresql "42.2.8"]                               ; Postgres driver
    [org.slf4j/slf4j-api "1.7.30"]                                     ; abstraction for logging frameworks -- allows end user to plug in desired logging framework at deployment time
-   [org.slf4j/slf4j-log4j12 "1.7.30"]                                 ; ^^
    [org.tcrawley/dynapath "1.1.0"]                                    ; Dynamically add Jars (e.g. Oracle or Vertica) to classpath
    [org.threeten/threeten-extra "1.5.0"]                               ; extra Java 8 java.time classes like DayOfMonth and Quarter
    [org.yaml/snakeyaml "1.23"]                                        ; YAML parser (required by liquibase)
@@ -143,7 +158,7 @@
 
   :main ^:skip-aot metabase.core
 
-  ;; TODO - WHAT DOES THIS DO?
+  ;; Liquibase uses this manifest parameter to dynamically find extensions at startup (via classpath scanning, etc)
   :manifest
   {"Liquibase-Package"
    #= (eval
@@ -154,7 +169,6 @@
 
   :jvm-opts
   ["-XX:+IgnoreUnrecognizedVMOptions"                                 ; ignore things not recognized for our Java version instead of refusing to start
-   "-Xverify:none"                                                    ; disable bytecode verification when running in dev so it starts slightly faster
    "-Djava.awt.headless=true"]                                        ; prevent Java icon from randomly popping up in dock when running `lein ring server`
 
   :target-path "target/%s"
@@ -172,10 +186,16 @@
   "metabase.jar"
 
   :profiles
-  {:dev
-   {:source-paths ["dev/src" "local/src"]
+  {:oss ; exists for symmetry with the ee profile
+   {}
 
-    :test-paths ["test" "backend/mbql/test"]
+   :ee
+   {:source-paths ["enterprise/backend/src"]
+    :test-paths   ["enterprise/backend/test"]}
+
+   :dev
+   {:source-paths ["dev/src" "local/src"]
+    :test-paths   ["test" "backend/mbql/test"]
 
     :dependencies
     [[clj-http-fake "1.0.3" :exclusions [slingshot]]                  ; Library to mock clj-http responses
@@ -185,7 +205,8 @@
      [ring/ring-mock "0.4.0"]]
 
     :plugins
-    [[lein-environ "1.1.0"]] ; easy access to environment variables
+    [[lein-environ "1.1.0"] ; easy access to environment variables
+     [lein-licenses "LATEST"]]
 
     :injections
     [(require 'pjstadig.humane-test-output)
@@ -291,7 +312,7 @@
      :mb-api-key      "test-api-key"
      ;; use a random port between 3001 and 3501. That way if you run multiple sets of tests at the same time locally
      ;; they won't stomp on each other
-     :mb-jetty-port   #=(eval (str (+ 3001 (rand-int 500))))}
+     :mb-jetty-port   #= (eval (str (+ 3001 (rand-int 500))))}
 
     :jvm-opts
     ["-Duser.timezone=UTC"
@@ -312,13 +333,21 @@
     ;; so running the tests doesn't give you different answers
     {:jvm-opts ["-Duser.timezone=UTC"]}]
 
-   :bikeshed
+   ;; shared stuff between all linter profiles.
+   :linters-common
    [:include-all-drivers
+    :ee
+    :test-common
+    ;; always use in-memory H2 database for linters
+    {:env {:mb-db-type "h2"}}]
+
+   :bikeshed
+   [:linters-common
     {:plugins
      [[lein-bikeshed "0.5.2"]]}]
 
    :eastwood
-   [:include-all-drivers
+   [:linters-common
     {:plugins
      [[jonase/eastwood "0.3.6" :exclusions [org.clojure/clojure]]]
 
@@ -336,7 +365,7 @@
                            ;; get them to work
                            #_:unused-fn-args
                            #_:unused-locals]
-      :exclude-linters    [; Turn this off temporarily until we finish removing self-deprecated functions & macros
+      :exclude-linters    [    ; Turn this off temporarily until we finish removing self-deprecated functions & macros
                            :deprecations
                            ;; this has a fit in libs that use Potemin `import-vars` such as `java-time`
                            :implicit-dependencies
@@ -346,11 +375,12 @@
    ;; run ./bin/reflection-linter to check for reflection warnings
    :reflection-warnings
    [:include-all-drivers
+    :ee
     {:global-vars {*warn-on-reflection* true}}]
 
    ;; Check that all public vars have docstrings. Run with 'lein docstring-checker'
    :docstring-checker
-   [:include-all-drivers
+   [:linters-common
     {:plugins
      [[docstring-checker "1.1.0"]]
 
@@ -360,18 +390,22 @@
                 #"^metabase\.http-client$"]}}]
 
    :check-namespace-decls
-   [:include-all-drivers
+   [:linters-common
     {:plugins               [[lein-check-namespace-decls "1.0.2"]]
-     :source-paths          ^:replace ["src" "backend/mbql/src" "test" "backend/mbql/test"]
      :check-namespace-decls {:prefix-rewriting true}}]
 
    :cloverage
    [:test-common
-    {:dependencies [[cloverage "1.1.3-SNAPSHOT" :exclusions [riddley]]]
-     :plugins      [[lein-cloverage  "1.1.3-SNAPSHOT"]]
-     :source-paths ^:replace ["src" "backend/mbql/src"]
-     :test-paths   ^:replace ["test" "backend/mbql/test"]
-     :cloverage    {:fail-threshold 69}}]
+    {:dependencies [[camsaul/cloverage "1.2.1.1" :exclusions [riddley]]]
+     :plugins      [[camsaul/lein-cloverage  "1.2.1.1"]]
+     :source-paths ^:replace ["src" "backend/mbql/src" "enterprise/backend/src"]
+     :test-paths   ^:replace ["test" "backend/mbql/test" "enterprise/backend/test"]
+     :cloverage    {:fail-threshold 69
+                    :exclude-call
+                    [;; don't instrument logging forms, since they won't get executed as part of tests anyway
+                     ;; log calls expand to these
+                     clojure.tools.logging/logf
+                     clojure.tools.logging/logp]}}]
 
    ;; build the uberjar with `lein uberjar`
    :uberjar
